--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1118,7 +1118,7 @@ button:focus {
 }
 
 .tariff_popup{
-  margin-top: 35vh;
+  margin-top: -1vh;
   .modal-dialog {
     max-width: 630px;
     .modal-content{
@@ -1130,21 +1130,26 @@ button:focus {
       padding: 1rem 1rem 0;
       border: none;
       text-transform: uppercase;
-      background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
-      background-position: 136% 56%;
+      background: #FFF url(../images/tariff_bg_element.png) no-repeat;
+      background-position: 100% 0;
+      min-height: 150px;
+      border-radius: 9px 9px 0 0;
+      background-size: contain;
       @media (max-width: 576px) {
         background: #FFF;
       }
       .modal-title {
-        padding-left: 1rem;
+        padding-left: .6rem;
         margin-bottom: .5rem;
-        font-size: 1.525rem;
+        font-size: 1.8rem;
+        letter-spacing: 0.1rem;
       }
       .modal-sub_title{
         display: inline-block;
+        font-family: Rubik, sans-serif;
         padding-left: 1rem;
         max-width: 370px;
-        font-size: 13px;
+        font-size: 1.125rem;
         color: #D0CECE;
         text-transform: initial;
       }
@@ -1155,28 +1160,34 @@ button:focus {
       button.close {
         position: absolute;
         right: 1.5rem;
-        top: 1rem;
+        top: 0;
         opacity: 1;
         font-size: 2rem;
         color: white;
         @media (max-width: 576px) {
           color: #777;
         }
+        span{
+          font-size: 68px;
+          font-weight: 300;
+          font-family: serif;
+        }
       }
     }
 
     .modal-body {
-      padding: 1rem 2rem;
+      padding: 3rem 1.5rem 1rem;
       color: #C7C3C3;
       @media (max-width: 576px) {
         padding: 1rem;
       }
       .price{
+        letter-spacing: .061rem;
         display: inline-block;
         float: right;
         color: #1f2022;
         font-weight: 700;
-        font-size: 1.3rem;
+        font-size: 1.5rem;
         .price-period{
           font-size: 0.875rem;
           color: #adadad;
@@ -1184,7 +1195,50 @@ button:focus {
         .price-sale{
           font-size: 0.875rem;
           color: #00B605;
+          @media (max-width: 576px) {
+           display: block;
+          }
         }
+      }
+      .price_economy{
+        font-size: 1.6875rem;
+        float: right;
+        color: #1f2022;
+        &-count{
+          color: #b08fe0;
+          font-size: 1.9375rem;
+          font-weight: 500;
+        }
+      }
+      .custom-field3 {
+        border: 2px solid #E6E6E6;
+        background-color: #F9FBFC;
+        border-radius: 0;
+        padding-left: 4.6875rem;
+        @media (max-width: 576px) {
+          padding-left: 3.5rem;
+          font-size: 1.3rem;
+        }
+        &:focus{
+          border-color: #612ADE;
+        }
+        &::placeholder{
+          color: #E6E6E6;
+        }
+      }
+      .btn-inline-custom{
+        font-family: Montserrat, sans-serif;
+        font-weight: 500;
+        font-size: 1.5rem !important;
+        word-spacing: .25rem;
+      }
+      .icon-credit-cvc,.icon-credit-cxp{
+        width: 48%;
+      }
+      .coupon_sale{
+        font-size: 1rem;
+        display: block;
+        text-decoration: underline;
       }
     }
   }
