--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -883,6 +883,7 @@ button:focus {
     align-items: center;
     min-height: calc(100% - 95px);
     background: url(../images/404_illustration.svg) no-repeat 66% 35px;
+    background-size: contain;
     @media (max-width: 1199px) {
       background-position: 85% 35px;
     }
@@ -891,15 +892,10 @@ button:focus {
     }
 
     .l_404-container {
+      max-width: 600px;
       @media (max-width: 800px) {
         text-align: center;
-      }
-
-      img {
-        @media (max-width: 768px) {
-          height: auto;
-          width: 100%;
-        }
+        max-width: 100%;
       }
 
       .l_404-title {
@@ -1398,9 +1394,10 @@ button:focus {
 
   .modal-content {
     background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
-    background-position: 123% 93%;
+    background-position: 123% 0;
+    border: 0;
     @media (max-width: 991px) {
-      background-position: 153% 143%;
+      background-position: 160% 0;
     }
     @media (max-width: 576px) {
       background: #FFF;
@@ -1426,6 +1423,11 @@ button:focus {
       color: white;
       @media (max-width: 576px) {
         color: #777;
+      }
+      span {
+        font-size: 3.1875rem;
+        font-weight: 300;
+        line-height: 0;
       }
     }
   }
