--- a/src/scss/faq/faq.scss
+++ b/src/scss/faq/faq.scss
@@ -22,13 +22,13 @@
         padding: .95rem 1.25rem;
         border-bottom: 2px solid #6913cc;
         background-color: #fff;
+        cursor: pointer;
 
         h2 {
           font-size: 1.125rem;
           font-family: Rubik, sans-serif;
           color: #1F2022;
           font-weight: 400;
-
           .rules_desc {
             position: relative;
             border-bottom: 3px solid #6244c9;
@@ -43,9 +43,8 @@
             }
           }
         }
-
-        .rules_desc.collapsed {
-           &::before {
+        &.collapsed .rules_desc {
+          &::before {
             content: "";
             width: 20px;
             height: 3px;
