--- a/css/app.css
+++ b/css/app.css
@@ -13187,36 +13187,12 @@ button:focus {
     margin-top: 3.5rem;
   }
 }
-.l_site-main .first_screen-container {
-  margin-top: 9.375rem;
-  margin-bottom: 3rem;
+.first_screen .l_site-main {
+  display: flex;
+  align-items: center;
+  height: calc(100% - 100px);
 }
-@media (max-width: 1280px) {
-  .l_site-main .first_screen-container {
-    margin-top: 7.375rem;
-  }
-}
-@media (max-width: 992px) {
-  .l_site-main .first_screen-container {
-    margin-top: 5rem;
-  }
-}
-@media (max-width: 768px) {
-  .l_site-main .first_screen-container {
-    margin-top: 7rem;
-  }
-}
-@media (max-width: 576px) {
-  .l_site-main .first_screen-container {
-    margin-top: 1.375rem;
-  }
-}
-@media (min-width: 2200px) {
-  .l_site-main .first_screen-container {
-    margin-top: 13.5rem;
-  }
-}
-.l_site-main .first_screen-container .first_screen-title {
+.first_screen .l_site-main .first_screen-container .first_screen-title {
   font-size: 3rem;
   font-family: Rubik, sans-serif;
   color: #1F2022;
@@ -13224,16 +13200,16 @@ button:focus {
   margin-bottom: 0.8rem;
 }
 @media (max-width: 1500px) {
-  .l_site-main .first_screen-container .first_screen-title {
+  .first_screen .l_site-main .first_screen-container .first_screen-title {
     font-size: 2.5rem;
   }
 }
 @media (max-width: 576px) {
-  .l_site-main .first_screen-container .first_screen-title {
+  .first_screen .l_site-main .first_screen-container .first_screen-title {
     font-size: 2rem;
   }
 }
-.l_site-main .first_screen-container .first_screen_sub-title {
+.first_screen .l_site-main .first_screen-container .first_screen_sub-title {
   font-size: 1.875rem;
   font-family: Rubik, sans-serif;
   color: #1F2022;
@@ -13242,28 +13218,28 @@ button:focus {
   margin-bottom: 3.125rem;
 }
 @media (max-width: 1500px) {
-  .l_site-main .first_screen-container .first_screen_sub-title {
+  .first_screen .l_site-main .first_screen-container .first_screen_sub-title {
     font-size: 1.5rem;
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 576px) {
-  .l_site-main .first_screen-container .first_screen_sub-title {
+  .first_screen .l_site-main .first_screen-container .first_screen_sub-title {
     font-size: 1.2rem;
   }
 }
-.l_site-main .first_screen-container .btn {
+.first_screen .l_site-main .first_screen-container .btn {
   padding: 1.2rem 5.78rem;
   font-size: 1.3rem !important;
   border-radius: 0.65rem !important;
 }
 @media (max-width: 1500px) {
-  .l_site-main .first_screen-container .btn {
+  .first_screen .l_site-main .first_screen-container .btn {
     padding: 1rem 4rem;
   }
 }
 @media (max-width: 576px) {
-  .l_site-main .first_screen-container .btn {
+  .first_screen .l_site-main .first_screen-container .btn {
     padding: 0.71rem 3rem;
   }
 }
