--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -228,65 +228,52 @@ button:focus {
   @media (min-width: 1200px) {
     //margin-bottom: 210px;
   }
+  .first_screen & {
+    display: flex;
+    align-items: center;
+    height: calc(100% - 100px);
 
-  .first_screen-container {
-    margin-top: 9.375rem;
-    margin-bottom: 3rem;
-    @media (max-width: 1280px) {
-      margin-top: 7.375rem;
-    }
-    @media (max-width: 992px) {
-      margin-top: 5rem;
-    }
-    @media (max-width: 768px) {
-      margin-top: 7rem;
-    }
-    @media (max-width: 576px) {
-      margin-top: 1.375rem;
-    }
-    @media (min-width: 2200px) {
-      margin-top: 13.5rem;
-    }
+    .first_screen-container {
+      .first_screen-title {
+        font-size: 3rem;
+        font-family: Rubik, sans-serif;
+        color: #1F2022;
+        text-align: center;
+        margin-bottom: 0.8rem;
+        @media (max-width: 1500px) {
+          font-size: 2.5rem;
+        }
+        @media (max-width: 576px) {
+          font-size: 2rem;
+        }
+      }
 
-    .first_screen-title {
-      font-size: 3rem;
-      font-family: Rubik, sans-serif;
-      color: #1F2022;
-      text-align: center;
-      margin-bottom: 0.8rem;
-      @media (max-width: 1500px) {
-        font-size: 2.5rem;
+      .first_screen_sub-title {
+        font-size: 1.875rem;
+        font-family: Rubik, sans-serif;
+        color: #1F2022;
+        text-align: center;
+        font-weight: 400;
+        margin-bottom: 3.125rem;
+        @media (max-width: 1500px) {
+          font-size: 1.5rem;
+          margin-bottom: 2rem;
+        }
+        @media (max-width: 576px) {
+          font-size: 1.2rem;
+        }
       }
-      @media (max-width: 576px) {
-        font-size: 2rem;
-      }
-    }
 
-    .first_screen_sub-title {
-      font-size: 1.875rem;
-      font-family: Rubik, sans-serif;
-      color: #1F2022;
-      text-align: center;
-      font-weight: 400;
-      margin-bottom: 3.125rem;
-      @media (max-width: 1500px) {
-        font-size: 1.5rem;
-        margin-bottom: 2rem;
-      }
-      @media (max-width: 576px) {
-        font-size: 1.2rem;
-      }
-    }
-
-    .btn {
-      padding: 1.2rem 5.78rem;
-      font-size: 1.3rem !important;
-      border-radius: 0.65rem !important;
-      @media (max-width: 1500px) {
-        padding: 1rem 4rem;
-      }
-      @media (max-width: 576px) {
-        padding: 0.71rem 3rem;
+      .btn {
+        padding: 1.2rem 5.78rem;
+        font-size: 1.3rem !important;
+        border-radius: 0.65rem !important;
+        @media (max-width: 1500px) {
+          padding: 1rem 4rem;
+        }
+        @media (max-width: 576px) {
+          padding: 0.71rem 3rem;
+        }
       }
     }
   }
